// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`product-menu Beta product renders as expected 1`] = `
<a
  className="wmax240-ml wmax180-mm txt-fancy txt-l block txt-truncate color-blue-on-hover"
  href="/vision/"
>
  Vision SDK for Android
  <span
    className="inline-block ml6 relative"
    style={
      Object {
        "top": "-2px",
      }
    }
  >
    <div
      className="inline-block"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        aria-describedby="tooltip-1"
        className="txt-s txt-bold round px6 inline-block cursor-default border"
        style={
          Object {
            "background": "#e8f5ee",
            "borderColor": "#75c684",
            "color": "#1b7d4f",
          }
        }
      >
        Beta
      </div>
      <div
        className="hide-visually"
        id="tooltip-1"
        role="tooltip"
      >
        <div
          className="txt-s wmax120"
        >
          This feature is in public beta and is subject to changes.
        </div>
      </div>
    </div>
  </span>
</a>
`;

exports[`product-menu Custom trigger style - display only renders as expected 1`] = `
<div
  className="bg-gray-dark py6"
>
  <a
    className="wmax240-ml wmax180-mm txt-fancy txt-l block txt-truncate color-white color-gray-light-on-hover"
    href="/api-documentation/"
  >
    Light on dark
  </a>
</div>
`;

exports[`product-menu Fake items, but one matches this test case's location renders as expected 1`] = `
<a
  className="wmax240-ml wmax180-mm txt-fancy txt-l block txt-truncate color-blue-on-hover"
  href="/api-documentation/"
>
  Items in here
</a>
`;

exports[`product-menu Mapbox product menu renders as expected 1`] = `
<a
  className="wmax240-ml wmax180-mm txt-fancy txt-l block txt-truncate color-blue-on-hover"
  href="/api-documentation/"
>
  Mapbox product names
</a>
`;

exports[`product-menu Product menu with something arbitrary in it renders as expected 1`] = `
<a
  className="wmax240-ml wmax180-mm txt-fancy txt-l block txt-truncate color-blue-on-hover"
  href="/api-documentation/"
>
  Pizza pie
</a>
`;
